Actually fixed misaligned title

--- a/css/gallery.css
+++ b/css/gallery.css
@@ -112,7 +112,7 @@
 	line-height: 48px
 }
 #gallery-caption {
-	padding-left: -48px;
+	padding-right: 48px;
 	font-size: 20px;
 	color: #fff;
 	background-color: #000;
